update gitignore to ignore env files

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,10 @@ jspm_packages
 
 #Excluding build directory
 public/
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
